# TravelUAV

./: .gitignore  README.md  requirement.txt
Model/LLaMA-UAV/: pyproject.toml
Model/LLaMA-UAV/llamavid/model/: __init__.py  builder.py  llamavid_arch.py
Model/LLaMA-UAV/llamavid/model/language_model/: llava_llama_uav.py  llava_qwen_uav.py  qwen_uav.py
Model/LLaMA-UAV/llamavid/qwen2/: __init__.py  modeling_attn_mask_utils.py  modeling_qwen2.py  tokenization_qwen2.py  tokenization_qwen2_fast.py
Model/LLaMA-UAV/llamavid/train/: llava_trainer.py
Model/LLaMA-UAV/llamavid/train/train_uav/: train_uav_notice.py
Model/LLaMA-UAV/scripts/: zero2.json
Model/LLaMA-UAV/scripts/llm/: train_uav_llm.sh
Model/LLaMA-UAV/scripts/traj/: train_traj_completion.sh
scripts/: eval.sh  metric.sh
src/model_wrapper/utils/: travel_util.py
src/vlnce_src/: assist.py  env_uav.py
