[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llamavid"
version = "1.0"
description = "LLaMA-VID"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "llava@git+ssh://git@github.com/haotian-liu/LLaVA.git@0a16dea493ac62083c6c2d875de2398391f0f4a3",
    "deepspeed",
    "tokenizers",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "decord",
    "einops",
    "einops-exts",
    "fairscale",
    "fastapi",
    "gradio",
    "gradio_client",
    "httpx",
    "markdown2[all]",
    "numpy",
    "peft",
    "requests",
    "scikit-learn",
    "sentencepiece",
    "shortuuid",
    "timm",
    "uvicorn",
    "wandb"
]

[project.urls]
"Homepage" = "https://llama-vid.github.io"
"Bug Tracker" = "https://github.com/dvlab-research/LLaMA-VID/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
